Fix overflow issues

--- a/src/wiki/blocks/WButton/WButton.less
+++ b/src/wiki/blocks/WButton/WButton.less
@@ -53,7 +53,7 @@
         &__label {
             flex-grow: 1;
             text-align: left;
-            overfloWX: hidden;
+            overflow-x: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
