--- a/src/wiki/blocks/WExample/WExample.less
+++ b/src/wiki/blocks/WExample/WExample.less
@@ -107,7 +107,7 @@
 
         &__code {
             max-width: 563px;
-            overfloWX: scroll;
+            overflow-x: scroll;
             margin-top: 7px;
         }
 
