--- a/src/wiki/blocks/WPane/WPane.less
+++ b/src/wiki/blocks/WPane/WPane.less
@@ -4,8 +4,8 @@
     .WPane {
         background: @wiki-pane-background;
         color: #666;
-        overfloWX: hidden;
-        overfloWY: scroll;
+        overflow-x: hidden;
+        overflow-y: scroll;
         margin: 0;
         padding: 0;
         width: 160px;
